{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 390,
  "lineage": "b58333a0-4f97-2a26-1d9f-c7c3ec4b49f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0181bb8e2b56fcffe",
            "domain": "vpc",
            "id": "eipalloc-0181bb8e2b56fcffe",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-187-100-200.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.100.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ff6658b7857a6f0",
            "domain": "vpc",
            "id": "eipalloc-01ff6658b7857a6f0",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-209-180-5.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.180.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec80c2ac8eab367",
            "domain": "vpc",
            "id": "eipalloc-0dec80c2ac8eab367",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-229-215-47.us-west-2.compute.amazonaws.com",
            "public_ip": "44.229.215.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:internet-gateway/igw-0f0d206504618055a",
            "id": "igw-0f0d206504618055a",
            "owner_id": "745882220951",
            "tags": {
              "Name": "internet gateway",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "internet gateway",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:745882220951:loadbalancer/app/practical-alb/f802df3882978ebd",
            "arn_suffix": "app/practical-alb/f802df3882978ebd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "practical-alb-273267580.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:745882220951:loadbalancer/app/practical-alb/f802df3882978ebd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "practical-alb",
            "security_groups": [
              "sg-0e4514587c2db5f7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-068f5aeb3d427b155"
              },
              {
                "subnet_id": "subnet-06f3c9826b98290ea"
              },
              {
                "subnet_id": "subnet-0915bd9576a2aef40"
              }
            ],
            "subnets": [
              "subnet-068f5aeb3d427b155",
              "subnet-06f3c9826b98290ea",
              "subnet-0915bd9576a2aef40"
            ],
            "tags": {
              "Project": "practical",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "tags_all": {
              "Project": "practical",
              "name": "Demo-AppLoadBalancer-tf"
            },
            "vpc_id": "vpc-0b576b97cf911085e",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub_a",
            "aws_subnet.pub_sub_b",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:745882220951:listener/app/practical-alb/f802df3882978ebd/20a27c7dae2df28e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:745882220951:targetgroup/Demo-TargetGroup-tf/229f8cbc8dbf6501",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:745882220951:listener/app/practical-alb/f802df3882978ebd/20a27c7dae2df28e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:745882220951:loadbalancer/app/practical-alb/f802df3882978ebd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-tf",
            "aws_lb_target_group.TG-tf",
            "aws_security_group.elb_sg",
            "aws_subnet.pub_sub_a",
            "aws_subnet.pub_sub_b",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:745882220951:targetgroup/Demo-TargetGroup-tf/229f8cbc8dbf6501",
            "arn_suffix": "targetgroup/Demo-TargetGroup-tf/229f8cbc8dbf6501",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 70,
                "matcher": "200,202",
                "path": "/index.html",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:745882220951:targetgroup/Demo-TargetGroup-tf/229f8cbc8dbf6501",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Demo-TargetGroup-tf",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0181bb8e2b56fcffe",
            "connectivity_type": "public",
            "id": "nat-094c0d2718e9e2721",
            "network_interface_id": "eni-0272da0b1ffae9ace",
            "private_ip": "196.16.1.201",
            "public_ip": "54.187.100.200",
            "subnet_id": "subnet-068f5aeb3d427b155"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_subnet.pub_sub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01ff6658b7857a6f0",
            "connectivity_type": "public",
            "id": "nat-0012c3c09f8d53083",
            "network_interface_id": "eni-03831fa6620b67c6c",
            "private_ip": "196.16.2.81",
            "public_ip": "34.209.180.5",
            "subnet_id": "subnet-06f3c9826b98290ea"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_subnet.pub_sub_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateway_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dec80c2ac8eab367",
            "connectivity_type": "public",
            "id": "nat-03c50c23194c88bf2",
            "network_interface_id": "eni-08d7e6575ba6598e7",
            "private_ip": "196.16.3.53",
            "public_ip": "44.229.215.47",
            "subnet_id": "subnet-0915bd9576a2aef40"
          },
          "dependencies": [
            "aws_eip.eip_natgw3",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:route-table/rtb-0a7cb5db463c0d185",
            "id": "rtb-0a7cb5db463c0d185",
            "owner_id": "745882220951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-094c0d2718e9e2721",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet1 route table",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private subnet1 route table",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_subnet.pub_sub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:route-table/rtb-084b925c41c1bad71",
            "id": "rtb-084b925c41c1bad71",
            "owner_id": "745882220951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0012c3c09f8d53083",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet2 route table",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private subnet2 route table",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_subnet.pub_sub_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_sub3_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:route-table/rtb-05e7b59e410cd7cc5",
            "id": "rtb-05e7b59e410cd7cc5",
            "owner_id": "745882220951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c50c23194c88bf2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private subnet3 route table",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private subnet3 route table",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgw3",
            "aws_nat_gateway.natgateway_3",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_sub1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:route-table/rtb-0f319a6a86d4950d4",
            "id": "rtb-0f319a6a86d4950d4",
            "owner_id": "745882220951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0d206504618055a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route table",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "route table",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c829ede8ef74a0a",
            "route_table_id": "rtb-0f319a6a86d4950d4",
            "subnet_id": "subnet-068f5aeb3d427b155"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003ade420bf151eaa",
            "route_table_id": "rtb-0f319a6a86d4950d4",
            "subnet_id": "subnet-06f3c9826b98290ea"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_for_pub_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aebb9c5a2a61606",
            "route_table_id": "rtb-0f319a6a86d4950d4",
            "subnet_id": "subnet-0915bd9576a2aef40"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_sub1_rt",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c136931bdb3e316",
            "route_table_id": "rtb-0a7cb5db463c0d185",
            "subnet_id": "subnet-03074a591a248ec56"
          },
          "dependencies": [
            "aws_eip.eip_natgw1",
            "aws_nat_gateway.natgateway_1",
            "aws_route_table.prv_sub1_rt",
            "aws_subnet.prv_sub_a",
            "aws_subnet.pub_sub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_to_natgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab7117446b06885d",
            "route_table_id": "rtb-084b925c41c1bad71",
            "subnet_id": "subnet-05bf3a2a09ce6eba8"
          },
          "dependencies": [
            "aws_eip.eip_natgw2",
            "aws_nat_gateway.natgateway_2",
            "aws_route_table.prv_sub2_rt",
            "aws_subnet.prv_sub_b",
            "aws_subnet.pub_sub_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub3_to_natgw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07746f7aa285584c0",
            "route_table_id": "rtb-05e7b59e410cd7cc5",
            "subnet_id": "subnet-0424cf9f11696eb0c"
          },
          "dependencies": [
            "aws_eip.eip_natgw3",
            "aws_nat_gateway.natgateway_3",
            "aws_route_table.prv_sub3_rt",
            "aws_subnet.prv_sub_c",
            "aws_subnet.pub_sub_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:security-group/sg-0e4514587c2db5f7a",
            "description": "sg for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4514587c2db5f7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my_alb_sg",
            "name_prefix": "",
            "owner_id": "745882220951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "ALB-SG",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:security-group/sg-0fb42b01d89ffd47d",
            "description": "SG for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb42b01d89ffd47d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": "",
            "owner_id": "745882220951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG for web",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "SG for web",
              "Project": "practical"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-03074a591a248ec56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "196.16.4.0/24",
            "id": "subnet-03074a591a248ec56",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745882220951",
            "tags": {
              "Name": "private_subnet_a",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private_subnet_a",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-05bf3a2a09ce6eba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "196.16.5.0/24",
            "id": "subnet-05bf3a2a09ce6eba8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745882220951",
            "tags": {
              "Name": "private_subnet_b",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private_subnet_b",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prv_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-0424cf9f11696eb0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "196.16.6.0/24",
            "id": "subnet-0424cf9f11696eb0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745882220951",
            "tags": {
              "Name": "private_subnet_c",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "private_subnet_c",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-068f5aeb3d427b155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "196.16.1.0/24",
            "id": "subnet-068f5aeb3d427b155",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745882220951",
            "tags": {
              "Name": "public_subnet_a",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "public_subnet_a",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-06f3c9826b98290ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "196.16.2.0/24",
            "id": "subnet-06f3c9826b98290ea",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745882220951",
            "tags": {
              "Name": "public_subnet_b",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "public_subnet_b",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:subnet/subnet-0915bd9576a2aef40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "196.16.3.0/24",
            "id": "subnet-0915bd9576a2aef40",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745882220951",
            "tags": {
              "Name": "public_subnet_c",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "public_subnet_c",
              "Project": "practical"
            },
            "vpc_id": "vpc-0b576b97cf911085e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:745882220951:vpc/vpc-0b576b97cf911085e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "196.16.0.0/16",
            "default_network_acl_id": "acl-0f3f40deae9939886",
            "default_route_table_id": "rtb-0e99c4a1e512b33cd",
            "default_security_group_id": "sg-0a25bbaa8b6fb3597",
            "dhcp_options_id": "dopt-d11d61a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b576b97cf911085e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e99c4a1e512b33cd",
            "owner_id": "745882220951",
            "tags": {
              "Name": "My VPC",
              "Project": "practical"
            },
            "tags_all": {
              "Name": "My VPC",
              "Project": "practical"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}